refactor : 예외 상황시 에러 문구를 Enum으로 구현 / Service에 있던 결과 결과삽입을 controller로 이동